<resources>
    <string name="loading_tip">载入中…</string>
    <string name="login_loading">登录中…</string>
    <string name="exit_app_tip">再按一次退出程序</string>
    <string name="into_game_error">暂时无法登入游戏</string>
    <string name="find_line_error">找不到可用的线路域名！</string>
    <string name="timeout_error">请求超时，请稍后再试！</string>
    <string name="net_busy_error">服务忙，请稍后再试！</string>
    <string name="url_is_null">传入地址为空！</string>
    <string name="reLogin">请先登录！</string>
    <string name="checking_line">正在检测线路:%1$s</string>
    <string name="checking_line_fail">线路检测失败:%1$s</string>
    <string name="checking_line_success">线路检测成功:%1$s</string>
    <string name="get_checking_line_fail">线路获取失败:%1$s</string>
    <string name="get_checking_line_success">线路获取成功:%1$s</string>
    <string name="get_checking_line_null">返回线路为空</string>
    <string name="stop_get_check_line">停止获取线路</string>
    <string name="logining">登录中...</string>
    <string name="needRealName">该账户需要手动登录，请手动登录~</string>
    <string name="title_online">线上支付</string>
    <string name="title_wechat">微信支付</string>
    <string name="login">登录</string>
    <string name="title">标题</string>
    <string name="submit">提交</string>
    <string name="username_hint">请输入账号</string>
    <string name="password_hint">请输入密码</string>
    <string name="captcha_hint">请输入验证码</string>
    <string name="enter_captcha">请输入正确的验证码</string>
    <string name="username_validate">账号不能为空</string>
    <string name="password_validate">密码不能为空</string>
    <string name="captcha_validate">验证码格式有误</string>
    <string name="auto_login">自动登录</string>
    <string name="btnLogin">登录</string>
    <string name="register">注册</string>
    <string name="forget_password">忘记密码</string>
    <string name="check_update">检测到有新的版本，是否更新？</string>
    <string name="btnConfirm">确认</string>
    <string name="btnCancel">取消</string>
    <string name="title_activity_full">FullActivity</string>
    <string name="loginSoon">立即登录</string>
    <string name="noAccount">没有账号？</string>
    <string name="registerSoon">免费开户</string>

    <string name="real_name_error">真实姓名与账号不匹配</string>
    <string name="account_existence">账号已存在</string>
    <string name="verify_name_ok">验证成功</string>
    <string name="verify_name_error">验证失败</string>

    <string name="assetTotal">总资产</string>
    <string name="assetWallet">钱包</string>
    <string name="assetRefresh">刷新额度</string>
    <string name="assetDeposit">存款</string>

    <string name="tabHome">首页</string>
    <string name="tabDeposit">存款</string>
    <string name="tabTransfer">转账</string>
    <string name="tabWithdraw">取款</string>
    <string name="tabService">客服</string>
    <string name="tabMine">我的</string>

    <string name="txtVersion">当前版本：v</string>
    <string name="unNet">网络不可用，请检查网络设置</string>

    <string name="gameUrlError">游戏地址错误</string>
    <string name="refreshFailed">余额刷新失败</string>
    <string name="refreshBalance">刷新额度(%d)</string>
    <string name="saveImgFailed">图片保存失败</string>
    <string name="saveImgSuccess">已保存到相册</string>
    <string name="getCaptchaFail">获取验证码失败</string>

    <string name="refreshing">正在刷新</string>
    <string name="downloading">正在下载…</string>

    <string name="checkLine">正在检测线路，请稍后…</string>
    <string name="checkOk">检测完成，即将进入…</string>
    <string name="imageUrlNil">图片地址为空</string>

    <string name="updateVersion">版本更新</string>
    <string name="btnDemo">试玩</string>

    <string name="tabHall">购彩大厅</string>
    <string name="prompt">提示</string>
    <string name="demoPrompt">游戏盘口只供试玩，与正式盘口无关</string>
    <string name="welcome">欢迎！%s</string>

    <string name="defaultContent">你弹个框几个意思？</string>

    <string name="tabLottery">充值/提现</string>
    <string name="tabBet">投注记录</string>
    <string name="tabMember">会员中心</string>
    <string name="e606">您已被强制踢出，请重新登录</string>
    <string name="demoNoPermit">试玩账号无权限访问</string>

    <string name="iBack">返回</string>
    <string name="check_version">版本更新</string>
    <string name="logout">退出</string>
    <string name="about">关于</string>
    <string name="help">帮助</string>
    <string name="check_loading">检查中</string>
    <string name="no_new_version">暂无更新！</string>
    <string name="refreshed">已刷新！</string>
</resources>
