<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:skin="http://schemas.android.com/android/skin"
    android:layout_width="match_parent"
    android:layout_height="@dimen/toolbar_height"
    android:theme="@style/ToolbarTheme"
    android:background="?attr/colorPrimary"
    android:minHeight="?attr/actionBarSize"
    skin:enable="true">

    <RelativeLayout
        android:id="@+id/rlLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="4dp"
        android:paddingBottom="4dp">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:maxWidth="140dp"
            android:maxHeight="40dp"
            android:adjustViewBounds="true"
            android:layout_centerVertical="true"
            android:scaleType="fitStart"/>

        <!--尚未登陆-->
        <LinearLayout
            android:id="@+id/llLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnLogin"
                android:layout_width="@dimen/toolbar_btn_width"
                android:layout_height="@dimen/toolbar_btn_height"
                android:background="@drawable/toolbar_login_btn"
                android:text="@string/btnLogin"
                android:textAllCaps="false"
                android:textColor="@color/signInText"
                skin:enable="true"/>

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="@dimen/toolbar_btn_width"
                android:layout_height="@dimen/toolbar_btn_height"
                android:layout_marginStart="6dp"
                android:background="@drawable/toolbar_regis_btn"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="@color/signUpText"
                skin:enable="true"/>

            <Button
                android:id="@+id/btnDemo"
                android:layout_width="@dimen/toolbar_btn_width"
                android:layout_height="@dimen/toolbar_btn_height"
                android:layout_marginStart="6dp"
                android:background="@drawable/toolbar_demo_btn"
                android:text="@string/btnDemo"
                android:textAllCaps="false"
                android:textColor="@color/demoText"
                skin:enable="true"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="120dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:gravity="center_vertical"
            android:text="@string/welcome"
            android:textSize="16sp"
            android:textColor="@color/colorTitle"
            android:maxLines="1"
            android:visibility="gone"/>

        <ImageView
            android:id="@+id/ivRefresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:src="@drawable/refresh"
            android:visibility="gone"
            />

    </RelativeLayout>

</android.support.v7.widget.Toolbar>