<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/llAssets"
    android:layout_width="180dp"
    android:layout_height="match_parent"
    android:layout_alignParentBottom="true"
    android:layout_alignParentEnd="true"
    android:layout_marginTop="@dimen/toolbar_height"
    android:layout_marginBottom="@dimen/tab_bar_height"
    android:alpha="200"
    android:background="#666665"
    android:orientation="vertical"
    android:visibility="gone">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/llBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:padding="15dp"
            android:orientation="vertical">
            <Button
                android:id="@+id/btnRefreshAssets"
                android:layout_width="150dp"
                android:layout_height="36dp"
                android:layout_gravity="center_horizontal"
                android:background="@color/btnAssets"
                android:text="@string/assetRefresh"
                android:textColor="@color/colorTitle"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btnDeposit"
                android:layout_width="150dp"
                android:layout_height="36dp"
                android:layout_gravity="center_horizontal"
                android:background="#404040"
                android:layout_marginTop="10dp"
                android:text="@string/assetDeposit"
                android:textColor="@color/colorTitle"
                android:textSize="14sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="10dp"
            android:background="@color/colorLine"
            android:layout_above="@id/llBtn"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingStart="15dp"
            android:paddingEnd="10dp"
            android:layout_above="@id/llBtn"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/assetTotal"
                    android:textColor="@color/colorTitle"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tvAssets"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:textColor="@color/colorTitle"
                    android:textSize="12sp" />
            </RelativeLayout>

            <include layout="@layout/vertical_line" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/assetWallet"
                    android:textColor="@color/colorTitle"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/tvWallet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:textColor="@color/colorTitle"
                    android:textSize="12sp" />
            </RelativeLayout>

            <include layout="@layout/vertical_line" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rvAssets"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

    </RelativeLayout>
</LinearLayout>