<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:skin="http://schemas.android.com/android/skin"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".activity.CommonActivity">
    <!--title-->
    <include
        android:id="@+id/rlTitle"
        layout="@layout/common_title_bar" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="@color/setting_divide_line" />

    <RelativeLayout
        android:id="@+id/check_version_layout"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dip"
            android:text="@string/check_version"
            android:textColor="@color/setting_text_color"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dip"
            android:src="@drawable/next" />

        <TextView
            android:id="@+id/version_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/next"
            android:text="V 3.0.0"
            android:textColor="@color/setting_text_color"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_alignParentBottom="true"
            android:background="@color/setting_divide_line" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/help_layout"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dip"
            android:text="@string/help"
            android:textColor="@color/setting_text_color"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dip"
            android:src="@drawable/next" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_alignParentBottom="true"
            android:background="@color/setting_divide_line" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/about_layout"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dip"
            android:text="@string/about"
            android:textColor="@color/setting_text_color"
            android:textSize="16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dip"
            android:src="@drawable/next" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:layout_alignParentBottom="true"
            android:background="@color/setting_divide_line" />
    </RelativeLayout>


    <Button
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="36dip"
        android:layout_margin="30dip"
        android:background="@drawable/frame_fillet_blue"
        android:text="@string/logout"
        android:textColor="@color/white"
        android:textSize="18sp"
        skin:enable="true" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:layout_below="@id/rlTitle"
        android:progressDrawable="@drawable/progress_bar_horizontal"
        android:visibility="gone" />
</LinearLayout>